<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_report</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tanaka.hidetake@gmail.com">eolab</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime/test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Message dependencies for our nodes -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
